fixed path to fonts, fixed alignment

--- a/blocks/footer/__link-wrapper/footer__link-wrapper.css
+++ b/blocks/footer/__link-wrapper/footer__link-wrapper.css
@@ -1,5 +1,4 @@
 .footer__link-wrapper {
-  display: inline-block;
   margin: 0 15px 0 0;
   padding: 0;
 }
