--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,4 +1,6 @@
 .footer__links {
+  display: flex;
+  justify-content: space-around;
   margin: 0;
   padding: 0;
   font-weight: 400;
