--- a/blocks/header/__language/header__language.css
+++ b/blocks/header/__language/header__language.css
@@ -1,5 +1,4 @@
 .header__language {
-  display: inline-block;
   margin: 0;
   padding: 0 0 0 18px;
   box-sizing: border-box;
