--- a/blocks/header/__languages/header__languages.css
+++ b/blocks/header/__languages/header__languages.css
@@ -1,4 +1,6 @@
 .header__languages {
+  display: flex;
+  justify-content: space-around;
   margin: 0;
   padding: 0;
   list-style-type: none;
